// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/label/Label should correctly render default element 1`] = `
<StandardLabel
  labelContent={
    Array [
      <span>
        My Label
      </span>,
      null,
    ]
  }
>
  <input
    type="text"
  />
</StandardLabel>
`;

exports[`components/label/Label should render the hidden label when hideLabel is set 1`] = `
<HiddenLabel
  labelContent={
    Array [
      <span>
        My Label
      </span>,
      null,
    ]
  }
>
  <input
    type="text"
  />
</HiddenLabel>
`;
